--- a/UpdateService/appsettings.json
+++ b/UpdateService/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "LiteDb": {
+    "Filename": "updates.db"
+  }
 }
