Доведена до ума конфигурация БД

--- a/UpdateService/appsettings.json
+++ b/UpdateService/appsettings.json
@@ -8,6 +8,7 @@
   "AllowedHosts": "*",
 
   "LiteDb": {
-    "Filename": "updates.db"
+    "Filename": "updates.db",
+    "ConnectionMode": "shared"
   }
 }
